# GameplayConsistencyImprovementsProject

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUser.txt  PCH.h  plugin.cpp  vcpkg.json
Papyrus/: Build.ps1
Papyrus/FillHerUp_1.96/source/: include.txt  sr_inflateQuest.patch  sr_inflateQuest.psc
Papyrus/UD_3.0_NG_Experimental_13/: UD_AnimationManagerScript.psc.patch.txt
Papyrus/UD_3.0_NG_Experimental_13/source/: UD_AnimationManagerScript.psc  include.txt
Papyrus/UD_3.0_NG_Experimental_16/source/: UD_AnimationManagerScript.patch  UD_AnimationManagerScript.psc
Papyrus/scripts/source/: gcip.psc
SKSE/Plugins/: GCIP.ini
include/: GCIPConfig.h  GCIPHooks.h  GCIPModule.h  GCIPModuleManager.h  GCIPSpinLock.h
include/modules/: EncounterPlanner.h
src/: GCIPConfig.cpp  GCIPHooks.cpp  GCIPHooks.h  GCIPModuleManager.cpp
src/modules/: EncounterPlanner.cpp
